# stk-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_com.py
src/stk_mcp/: __init__.py  app.py  connect_client.py  server.py
src/stk_mcp/logic/: __init__.py  stk_state.py
src/stk_mcp/tools/: __init__.py  access.py  analysis.py  animation.py  cat.py  objects.py  orbit.py  raw.py  reports.py  scenario.py  util.py
