[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stk-mcp"
version = "0.1.0"
description = "MCP Server for controlling AGI STK via Connect TCP — enables AI agents to perform satellite mission analysis, conjunction assessment, and scenario automation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "stk", "satellite", "conjunction-assessment", "space-situational-awareness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
com = ["pywin32"]

[project.scripts]
stk-mcp = "stk_mcp.server:main"

[project.urls]
Homepage = "https://github.com/zhang-forever/stk-mcp"
Repository = "https://github.com/zhang-forever/stk-mcp"
Issues = "https://github.com/zhang-forever/stk-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stk_mcp"]
